Wed Nov 24 00:22:39 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Removed debug output; don't include \xa0 in the list of
	  whitespace characters for now, as that's a bit character set
	  specific...

Wed Nov 24 00:04:42 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: HTML extraction now turns strips leading and trailing
	  whitespace and converts all other consecutive groups of whitespace
	  to a single space.

Tue Nov 23 20:29:14 GMT 2004  Olly Betts <olly@survex.com>

	* Makefile.am: XAPIAN_FLAGS already links with xapianqueryparser
	  so remove -lxapianqueryparser from omega_LDADD as it was causing
	  problems on cygwin.

Wed Nov 17 18:51:28 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Index RTF documents with unrtf, if available.
	* docs/overview.txt: Document this.

Wed Nov 17 16:31:01 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: If a filename to be passed to a filter program has a
	  leading "-", protect it from possible interpretation as an option
	  by prepending "./".

Wed Nov 17 16:29:55 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Index Wordperfect documents with wpd2text, if available.
	* docs/overview.txt: Document this.

Wed Nov 17 15:12:08 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Index MS Word documents with antiword, if available.
	* docs/overview.txt: Document this.

Wed Nov 17 04:29:15 GMT 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Add simple code to index OpenOffice documents.
	* docs/overview.txt: Update documentation to mention this.

Tue Nov 09 03:04:44 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,Makefile.am: We now get -AA or -std strict_ansi from
	  xapian-config, so we don't need to probe for them ourselves.

Sun Nov 07 16:36:42 GMT 2004  Olly Betts <olly@survex.com>

	* utils.cc: Fixed to work with updated snprintf configure test,

Sun Nov 07 04:55:26 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: rearrange so that libtool is active when we test if