@@ -1,3 +1,9 @@
+Wed Nov 24 02:20:36 GMT 2004  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Improved HTML to text conversion - the parser now knows
+	  that some tags should be regarded as word breaks and some shouldn't
+	  (previously all tags were treated as word breaks).
+
 Wed Nov 24 00:22:39 GMT 2004  Olly Betts <olly@survex.com>
 
 	* omindex.cc: Removed debug output; don't include \xa0 in the list of
